# screp

./: .gitignore  LICENSE  Parsers.hs  README.md  benchmark.sh  cabal.project  contacts.txt  default.nix  pgrep.cabal  screp.cabal  shell.nix
app/: Main.hs  Scredit.hs
src/Scrappy/: Files.hs
src/Scrappy/Grep/: Config.hs  DSL.hs  Output.hs  Search.hs
src/Scrappy/Grep/DSL/: Interpreter.hs  Parser.hs
test/: ScreditTest.hs  Test.hs
