cabal-version:       2.4
name:                pgrep
version:             0.1.1.0
synopsis:            grep-like CLI using Parsec parsers instead of regex
description:
        pgrep is a grep-like command-line tool that uses Parsec parser
        combinators instead of regular expressions for pattern matching.
        Write patterns using a familiar Haskell-like DSL with combinators
        like 'some digit', 'string "TODO"', or 'manyTill anyChar (string "END")'.

homepage:            https://github.com/Ace-Interview-Prep/pgrep
license:             BSD-3-Clause
license-file:        LICENSE
author:              Galen Sprout
maintainer:          galen.sprout@gmail.com
bug-reports:         https://github.com/Ace-Interview-Prep/pgrep/issues
category:            Text, Console
build-type:          Simple
extra-source-files:  README.md, LICENSE

library
  exposed-modules:    Scrappy.Files
                    , Scrappy.Grep.DSL
                    , Scrappy.Grep.DSL.Parser
                    , Scrappy.Grep.DSL.Interpreter
                    , Scrappy.Grep.Search
                    , Scrappy.Grep.Config
                    , Scrappy.Grep.Output
  build-depends:       base >=4.19.0 && <5
                     , scrappy-core >=0.1.0.1 && <0.2
                     , containers >=0.7 && <0.8
                     , directory >=1.3.8 && <1.4
                     , filepath >=1.5.4 && <1.6
                     , parsec >=3.1.18 && <3.2
                     , process >=1.6 && <1.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable pgrep
  main-is:            Main.hs
  build-depends:       base >=4.19.0 && <5
                     , pgrep
                     , scrappy-core >=0.1.0.1 && <0.2
                     , optparse-applicative >=0.14 && <0.19
                     , directory >=1.3.8 && <1.4
                     , filepath >=1.5.4 && <1.6
                     , containers >=0.7 && <0.8
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded -rtsopts

test-suite pgrep-test
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  build-depends:       base >=4.19.0 && <5
                     , pgrep
                     , scrappy-core >=0.1.0.1 && <0.2
                     , directory >=1.3.8 && <1.4
                     , filepath >=1.5.4 && <1.6
                     , parsec >=3.1.18 && <3.2
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -Wall
